# LLVM-9.0-Learner-Tutorial

./: BuildAllFiles.sh  BuildLibs.sh  CODE_OF_CONDUCT.md  CleanBuiltFiles.sh  README.md  TestBuiltFiles.sh
Implementations/: CMakeLists.txt  README  README.md
Implementations/HI_APIntSrcAnalysis/: CMakeLists.txt  HI_APIntSrcAnalysis.cc  HI_APIntSrcAnalysis.h  README
Implementations/HI_APIntSrcTrans/: CMakeLists.txt  HI_APIntSrcTrans.cc  HI_APIntSrcTrans.h
Implementations/HI_AggressiveLSR_MUL/: CMakeLists.txt  HI_AggressiveLSR_MUL.cc  HI_AggressiveLSR_MUL.h  README
Implementations/HI_ArrayAccessPattern/: CMakeLists.txt  HI_ArrayAccessPattern.cc  HI_ArrayAccessPattern.h  README
Implementations/HI_ArraySensitiveToLoopLevel/: CMakeLists.txt  ClockInfo.h  HI_ArraySensitiveToLoopLevel.cc  HI_ArraySensitiveToLoopLevel.h  HI_ArraySensitiveToLoopLevel_BlockEvaluation.cc  HI_ArraySensitiveToLoopLevel_BramAccessTracer.cc  HI_ArraySensitiveToLoopLevel_Config_Parse.cc  HI_ArraySensitiveToLoopLevel_FunctionEvaluation.cc  HI_ArraySensitiveToLoopLevel_InstructionEvaluation.cc  HI_ArraySensitiveToLoopLevel_LoopEvaluation.cc  HI_ArraySensitiveToLoopLevel_SCEV.cc  HLS_Instructions_Info.txt  README.md
Implementations/HI_ConstantDivisorOpt/: CMakeLists.txt  HI_ConstantDivisorOpt.cc  HI_ConstantDivisorOpt.h  README
Implementations/HI_DependenceList/: CMakeLists.txt  HI_DependenceList.cc  HI_DependenceList.h  README
Implementations/HI_DuplicateInstRm/: CMakeLists.txt  HI_DuplicateInstRm.cc  HI_DuplicateInstRm.h  README
Implementations/HI_FindFunctions/: CMakeLists.txt  HI_FindFunction.cc  HI_FindFunction.h  README
Implementations/HI_FunctionInstantiation/: CMakeLists.txt  HI_FunctionInstantiation.cc  HI_FunctionInstantiation.h  README
Implementations/HI_FunctionInterfaceInfo/: CMakeLists.txt  HI_FunctionInterfaceInfo.cc  HI_FunctionInterfaceInfo.h  README
Implementations/HI_GEP_OffsetCombine/: CMakeLists.txt  HI_GEP_OffsetCombine.cc  HI_GEP_OffsetCombine.h  HLS_Instructions.txt  README
Implementations/HI_HLSDuplicateInstRm/: CMakeLists.txt  HI_HLSDuplicateInstRm.cc  HI_HLSDuplicateInstRm.h
Implementations/HI_IR2SourceCode/: CMakeLists.txt  HI_IR2SourceCode.cc  HI_IR2SourceCode.h
Implementations/HI_InstructionLatencyCollect/: CMakeLists.txt  HI_InstructionLatencyCollect.cc  HI_InstructionLatencyCollect.h
Implementations/HI_IntstructionMoveBackward/: CMakeLists.txt  HI_IntstructionMoveBackward.cc  HI_IntstructionMoveBackward.h  README
Implementations/HI_LoadALAP/: CMakeLists.txt  HI_LoadALAP.cc  HI_LoadALAP.h  README
Implementations/HI_LoopDependenceAnalysis/: CMakeLists.txt  HI_LoopDependenceAnalysis.cc  HI_LoopDependenceAnalysis.h
Implementations/HI_LoopInFormationCollect/: CMakeLists.txt  HI_LoopInFormationCollect.cc  HI_LoopInFormationCollect.h  README
Implementations/HI_LoopLabeler/: CMakeLists.txt  HI_LoopLabeler.cc  HI_LoopLabeler.h
Implementations/HI_LoopUnroll/: CMakeLists.txt  HI_LoopUnroll.cc  HI_LoopUnroll.h  README
Implementations/HI_Mul2Shl/: CMakeLists.txt  HI_Mul2Shl.cc  HI_Mul2Shl.h  README
Implementations/HI_MulOrderOpt/: CMakeLists.txt  HI_MulOrderOpt.cc  HI_MulOrderOpt.h  README
Implementations/HI_MuxInsertionArrayPartition/: CMakeLists.txt  HI_MuxInsertionArrayPartition.cc  HI_MuxInsertionArrayPartition.h  HI_MuxInsertionArrayPartition_BramAccessTracer.cc  HI_MuxInsertionArrayPartition_Config_Parse.cc  HI_MuxInsertionArrayPartition_MuxInsertion.cc  README.md
Implementations/HI_NoDirectiveTimingResourceEvaluation/: CMakeLists.txt  ClockInfo.cc  HI_InstructionFiles.cc  HI_InstructionFiles.h  HI_NoDirectiveTimingResourceEvaluation.cc  HI_NoDirectiveTimingResourceEvaluation.h  HI_NoDirectiveTimingResourceEvaluation_BlockEvaluation.cc  HI_NoDirectiveTimingResourceEvaluation_BlockLatency.cc  HI_NoDirectiveTimingResourceEvaluation_BramAccessTracer.cc  HI_NoDirectiveTimingResourceEvaluation_Config_Parse.cc  HI_NoDirectiveTimingResourceEvaluation_FunctionEvaluation.cc  HI_NoDirectiveTimingResourceEvaluation_FunctionLatency.cc  HI_NoDirectiveTimingResourceEvaluation_InstructionEvaluation.cc  HI_NoDirectiveTimingResourceEvaluation_InstructionLatency.cc  HI_NoDirectiveTimingResourceEvaluation_LoopEvaluation.cc  HI_NoDirectiveTimingResourceEvaluation_LoopLatency.cc  Instruction_list.cc  README  README.md
Implementations/HI_Polly_Info/: CMakeLists.txt  HI_Polly_Info.cc  HI_Polly_Info.h  README
Implementations/HI_PragmaTargetExtraction/: CMakeLists.txt  ClockInfo.cc  HI_PragmaTargetExtraction.cc  HI_PragmaTargetExtraction.h  HI_PragmaTargetExtraction_ArrayCheck.cc  HI_PragmaTargetExtraction_Config_Parse.cc  HI_PragmaTargetExtraction_LoopCheck.cc  Note  README.md
Implementations/HI_RemoveRedundantAccess/: CMakeLists.txt  HI_RemoveRedundantAccess.cc  HI_RemoveRedundantAccess.h  README
Implementations/HI_ReplaceSelectAccess/: CMakeLists.txt  HI_ReplaceSelectAccess.cc  HI_ReplaceSelectAccess.h  README
Implementations/HI_SeparateConstOffsetFromGEP/: CMakeLists.txt  HI_SeparateConstOffsetFromGEP.cc  HI_SeparateConstOffsetFromGEP.cpp  HI_SeparateConstOffsetFromGEP.h  README
Implementations/HI_SimpleTimingEvaluation/: CMakeLists.txt  HI_SimpleTimingEvaluation.cc  HI_SimpleTimingEvaluation.h  HI_SimpleTimingEvaluation_BlockLatency.cc  HI_SimpleTimingEvaluation_FunctionLatency.cc  HI_SimpleTimingEvaluation_LoopLatency.cc  README
Implementations/HI_StringProcess/: CMakeLists.txt  HI_StringProcess.cc  HI_StringProcess.h
Implementations/HI_SysExec/: CMakeLists.txt  HI_SysExec.cc  HI_SysExec.h
Implementations/HI_TopLoop2Func/: CMakeLists.txt  HI_TopLoop2Func.cc  HI_TopLoop2Func.h
Implementations/HI_VarWidthReduce/: CMakeLists.txt  HI_VarWidthReduce.cc  HI_VarWidthReduce.h  README
Implementations/HI_WithDirectiveTimingResourceEvaluation/: CMakeLists.txt  HI_InstructionFiles.cc  HI_InstructionFiles.h  HI_WithDirectiveTimingResourceEvaluation.cc  HI_WithDirectiveTimingResourceEvaluation.h  HI_WithDirectiveTimingResourceEvaluation_BlockEvaluation.cc  HI_WithDirectiveTimingResourceEvaluation_BramAccessTracer.cc  HLS_Instructions_Info.txt  README.md  (+6 more)
(+360 files in other folders)
